--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.github.yamingd.argo'
-version '2.3.2'
+version '2.3.3'
 
 apply plugin: 'maven'
 apply plugin: 'java'
@@ -20,7 +20,7 @@ compileTestJava {
 repositories {
     mavenLocal()
 
-    maven { url 'http://maven.oschina.net/content/groups/public/' }
+    // maven { url 'http://maven.oschina.net/content/groups/public/' }
 
     mavenCentral()
 }
@@ -31,21 +31,17 @@ dependencies {
     compile 'com.github.yamingd.argo:argo-yaml:1.2'
     compile 'org.apache.commons:commons-lang3:3.1'
     compile 'commons-codec:commons-codec:1.10'
-    compile 'org.springframework:spring-context:3.2.11.RELEASE'
-    compile 'org.springframework:spring-web:3.2.11.RELEASE'
+    compile 'org.springframework:spring-context:3.2.12.RELEASE'
+    compile 'org.springframework:spring-web:3.2.12.RELEASE'
     compile 'com.google.guava:guava:18.0'
     compile('org.slf4j:slf4j-api:1.7.5') {
         exclude(module: 'log4j-over-slf4j')
     }
     compile('javax.servlet:javax.servlet-api:3.1.0') {
-        /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-        This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-        Please review and delete this closure when resolved. */
+
     }
     compile('javax.servlet.jsp:jsp-api:2.1') {
-        /* This dependency was originally in the Maven provided scope, but the project was not of type war.
-        This behavior is not yet supported by Gradle, so this dependency has been converted to a compile dependency.
-        Please review and delete this closure when resolved. */
+
     }
     compile 'org.slf4j:jul-to-slf4j:1.5.11'
     compile 'ch.qos.logback:logback-classic:1.0.13'
